adding mealdiary + refactor